--- a/AK8PO-2.csproj
+++ b/AK8PO-2.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Losy.cs" />
+    <Compile Include="LosyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LosyForm.Designer.cs">
+      <DependentUpon>LosyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,7 +62,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Soutez.cs" />
-    <Compile Include="SpavceSoutezi.cs" />
+    <Compile Include="SrpavceSoutezi.cs" />
+    <EmbeddedResource Include="LosyForm.resx">
+      <DependentUpon>LosyForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
