--- a/AK8PO-2.csproj
+++ b/AK8PO-2.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Soutez.cs" />
     <Compile Include="SrpavceSoutezi.cs" />
+    <Compile Include="TabulkyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TabulkyForm.Designer.cs">
+      <DependentUpon>TabulkyForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LosyForm.resx">
       <DependentUpon>LosyForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +97,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TabulkyForm.resx">
+      <DependentUpon>TabulkyForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
