--- a/AK8PO-2.csproj
+++ b/AK8PO-2.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Soutez.cs" />
     <Compile Include="SrpavceSoutezi.cs" />
+    <Compile Include="Tabulky.cs" />
     <Compile Include="TabulkyForm.cs">
       <SubType>Form</SubType>
     </Compile>
